--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,24 @@
     padding: 0px;
     margin: 0px;
 }
-
+.product {
+    width: fit-content;
+    margin: 0 auto;
+    margin-top: 2%;
+    padding-left: 1em;
+    padding-right: 1em;
+    box-sizing: border-box;
+    display: block;
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.15),
+    0px 10px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    overflow: hidden;
+    background-color: #fff;
+    top: 1%;
+}
 /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
 .navbar {
     width: 70vw;
