--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@
 }
 /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
 .navbar {
-    width: 70vw;
+    width: fit-content;
     margin: 0 auto;
     margin-top: 1%;
     padding-left: 1em;
@@ -40,9 +40,10 @@
     z-index: 2;
     overflow: hidden;
     background-color: #fff;
-    position: sticky;
+    position: relative;
     top: 1%;
 }
+
 .navbar ul {
      list-style: none;
      margin: 0;
@@ -61,7 +62,11 @@
 }
 /* Style the search bar */
 .navbar .search-container {
-    float: left;
+    float: none;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .navbar input[type=text] {
     padding: 6px;
@@ -90,6 +95,7 @@
     text-align: center;
     padding: 14px 20px;
     text-decoration: none;
+
 }
 /* Right-aligned link */
 .navbar a.right {
@@ -121,6 +127,41 @@
 .link:hover{
     color: #5F5F5F;
     border-bottom: 2px solid #5F5F5F;
+}
+
+.product-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 20px;
+    row-gap: 20px;
+}
+.product {
+    text-decoration: none;
+    color: inherit;
+}
+.fakeimage {
+    background-color: #aaa;
+    width: 100%;
+    padding: 20px;
+}
+.side {
+    -ms-flex: 10%;
+    flex: 10%;
+    background-color: #f1f1f1;
+    padding: 20px;
+}
+
+/* Main column */
+.main {
+    -ms-flex: 80%;
+    flex: 80%;
+    background-color: white;
+    padding: 20px;
+}
+.footer {
+    padding: 20px;
+    text-align: center;
+    background: #ddd;
 }
 /*
 .tituloCatalogo{
@@ -171,7 +212,31 @@
 }
 */
 /* RESPONSIVIDAAAD */
-@media screen and (min-width: 1000px) {
+.navbar .icon {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .navbar a:not(:first-child) {display: none;}
+    .navbar a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .navbar.responsive {position: relative;}
+    .navbar.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .navbar.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
 /*    .catalogo{
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
@@ -195,6 +260,3 @@
         align-items: center;
     }
 */
-
-
-}
