--- a/css/styles.css
+++ b/css/styles.css
@@ -31,17 +31,27 @@
     padding-right: 1em;
     box-sizing: border-box;
     display: block;
-    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.15),
-    0px 10px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 10px 40px rgba(247, 147, 30, 0.15),
+    0px 10px 10px rgba(247, 147, 30, 0.1);
     border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: left;
     z-index: 2;
     overflow: hidden;
-    background-color: #fff;
+    background-color: RGBA(247, 147, 30,1 );
     position: relative;
     top: 1%;
+}
+
+.button1{
+    border: none;
+    background-color: #d7ced6;
+    cursor: pointer;
+    display: inline-block;
+}
+.button1:hover {
+    background: RGBA(247, 147, 30,1 );
 }
 
 .navbar ul {
@@ -109,7 +119,7 @@
 /* Active/current link */
 .navbar a.active {
     background-color: #666;
-    color: black;
+    color: white;
 }
 .logo:hover{
     text-decoration: none;
