--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 *{
     max-width: 100%;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
 }
 .product {
     width: fit-content;
@@ -13,8 +13,8 @@
     padding-right: 1em;
     box-sizing: border-box;
     display: block;
-    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.15),
-    0px 10px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15),
+    0 10px 10px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -54,8 +54,8 @@
     padding-right: 1em;
     box-sizing: border-box;
     display: block;
-    box-shadow: 0px 10px 40px rgba(247, 147, 30, 0.15),
-    0px 10px 10px rgba(247, 147, 30, 0.1);
+    box-shadow: 0 10px 40px rgba(247, 147, 30, 0.15),
+    0 10px 10px rgba(247, 147, 30, 0.1);
     border-radius: 20px;
     display: flex;
     align-items: center;
